# guitarpro

cli/: Cargo.toml
cli/src/: main.rs
lib/: Cargo.toml
lib/src/: enums.rs  lib.rs  song.rs
lib/src/load/: mod.rs
lib/src/load/gp7/: convert.rs  mod.rs  types.rs
lib/src/load/gp7/types/: gpif.rs  mod.rs  notes.rs  parser_ext.rs  rythms.rs
